modified:   QTL/settings.pyc 	modified:   QTL/urls.pyc 	modified:   qtl/templates/wouter/get_go.html 	modified:   qtl/templates/wouter/search_trait.html 	modified:   qtl/tests.py 	modified:   qtl/views.py 	modified:   qtl/views.pyc 	qtl/templates/wouter/no_go.html

--- a/qtl/templates/wouter/search_trait.html
+++ b/qtl/templates/wouter/search_trait.html
@@ -8,8 +8,8 @@
 		<br><br>
 		Enter cutoff : <input id ="cutoff" name ="cutoff_name" type="float"/>
 		<br><br>
-		Check for environmental permutation <br>
-		Uncheck for normal gene expression
+		Uncheck for normal gene expression / 
+		Check for environmental permutation
 		<input  id="set_gxe" name ="gxe" type="checkbox">
 		<br><br>
 		<input type="submit" id="search_submit" value="Search" />
