--- a/qtl/templates/wouter/search_trait.html
+++ b/qtl/templates/wouter/search_trait.html
@@ -10,7 +10,7 @@
 		<br><br>
 		Uncheck for normal gene expression / 
 		Check for environmental permutation
-		<input  id="set_gxe" name ="gxe" type="checkbox">
+		<input  id="set_gxe" name ="gxe" type="checkbox"/>
 		<br><br>
 		<input type="submit" id="search_submit" value="Search" />
 		<br><br>
