modified:   QTL/urls.py 	modified:   qtl/templates/wbase.html 	modified:   qtl/templates/wouter/get_go.html 	modified:   qtl/templates/wouter/search_trait.html 	modified:   qtl/urls.py 	modified:   qtl/views.py 	qtl/templates/wouter/check_trait.html 	qtl/templates/wouter/get_trait_stats.html 	qtl/templates/wouter/no_go.html

--- a/qtl/templates/wbase.html
+++ b/qtl/templates/wbase.html
@@ -9,7 +9,9 @@
     <div id="sidebar">
         {% block sidebar %}
         <ul>
-            <li><a href="/wouter/trait">Search trait</a></li>
+			<li><a href="/">Home</a></li>
+            <li><a href="/wouter/trait">Search individual trait</a></li>
+            <li><a href="/wouter/check">Search multiple traits</a></li>
         </ul>
         {% endblock %}
     </div>
