--- a/qtl/templates/wouter/search_trait.html
+++ b/qtl/templates/wouter/search_trait.html
@@ -2,11 +2,14 @@
 
 {% block content %}
 
+Enter a trait and a cutoff.
+The output will be a list of enriched GO terms.
+
 	
   	<form action="." method="get"> 
-		Enter trait : <input id="trait_id" name ="trait_name" type="text"/>
+		Enter one trait : <input id="trait_id" name ="trait_name" type="text"/>
 		<br><br>
-		Enter cutoff : <input id ="cutoff" name ="cutoff_name" type="float"/>
+		Enter one cutoff : <input id ="cutoff" name ="cutoff_name" type="float"/>
 		<br><br>
 		Uncheck for normal gene expression / 
 		Check for environmental permutation
@@ -16,6 +19,5 @@
 		<br><br>
 	</form>
 	
-
 
 {% endblock %}
