--- a/qtl/templates/wbase.html
+++ b/qtl/templates/wbase.html
@@ -2,16 +2,18 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="style.css" />
-    <title>{% block title %}My amazing site{% endblock %}</title>
+    <title>{% block title %}GO{% endblock %}</title>
 </head>
 
-<body>
+<body style="background-color:White">
     <div id="sidebar">
         {% block sidebar %}
         <ul>
 			<li><a href="/">Home</a></li>
             <li><a href="/wouter/trait">Search individual trait</a></li>
             <li><a href="/wouter/check">Search multiple traits</a></li>
+            <li><a href="/wouter/graph">Display graph</a></li>
+            <li><a href="/wouter/output">Display output data</a></li>
         </ul>
         {% endblock %}
     </div>
