--- a/qtl/templates/wouter/search_graph_trait.html
+++ b/qtl/templates/wouter/search_graph_trait.html
@@ -11,6 +11,13 @@
 		Enter a cutoff value: <input id ="cutoff" name ="cutoff_name" type="float"/>
 		<br><br>
 		
+		<select id = "experiment" name = "experiment_name">
+			{% for exp in exps %}
+				<option value = "{{ exp }}">{{ exp }}</option>
+			{% endfor %}
+		</select>
+		<br><br>
+		
 		<center><input type="submit" id="search_submit" value="Search" /></center>
 		
 		<br>
