--- a/qtl/templates/wouter/search_individual_trait.html
+++ b/qtl/templates/wouter/search_individual_trait.html
@@ -12,8 +12,18 @@
 		<br><br>
 		Enter one cutoff : <input id ="cutoff" name ="cutoff_name" type="float" size="10"/>
 		<br><br>
-		
 		<center><input type="submit" id="search_submit" value="Search" /></center>
+		<br>
+		<hr>
+		<br>		
+		Choose a dataset : 
+		<select id = "experiment" name = "experiment_name">
+			{% for exp in exps %}
+				<option value = "{{ exp }}">{{ exp }}</option>
+			{% endfor %}
+		</select>
+		<br>		
+
 		
 		<br>
 		<hr>
@@ -31,12 +41,12 @@
 		<br><br>
 		
 		A gene function must be present in more than <input id ="postA" name ="postA_name" type="float" size="5"/>
-		of the QTL regions of a trait (default = 0.5)
+		of the eQTL regions of a trait (default = 0.5)
 		
 		<br><br>
 		
 		Gene functions must not be predicted for more than <input id ="postB" name ="postB_name" type="float" size="5"/>
-		 of all genes (default = 0.01)
+		 of all genes in the genome (default = 0.01)
 		 
 		<br><br>
 		
@@ -46,6 +56,7 @@
 		
 		
 	</form>
-	
+
+<br>
 
 {% endblock %}
