modified:   QTL/settings.py 	modified:   QTL/urls.py 	new file:   qtl/common/__init__.py 	new file:   qtl/common/from_genelist_to_R.py 	new file:   qtl/common/from_trait_to_genelist.py 	new file:   qtl/common/views_backup.py 	new file:   qtl/documents/DAGgraph.py 	new file:   qtl/documents/data_anno_speed.py 	new file:   qtl/documents/extract_specific_go.py 	new file:   qtl/documents/go_bio_process.csv 	new file:   qtl/documents/go_cel_component.csv 	new file:   qtl/documents/go_plotter.py 	new file:   qtl/documents/godag_tester.py 	new file:   qtl/documents/parse_go_obo.py 	new file:   qtl/documents/parse_goslim_plant.py 	new file:   qtl/documents/parse_obo_file.py 	new file:   qtl/documents/read_go.py 	new file:   qtl/draw_DAG.py 	modified:   qtl/enrichment_results.py 	modified:   qtl/genelist_from_eqtl.py 	new file:   qtl/get_eQTL_size.py 	new file:   qtl/get_enrichment.py 	new file:   qtl/get_eqtl.py 	modified:   qtl/get_genelist.py 	modified:   qtl/go_enrichment.py 	new file:   qtl/metabolite_mQTL.py 	modified:   qtl/prepare_for_display.py 	modified:   qtl/templates/wbase.html 	modified:   qtl/templates/wouter/display_individual_trait.html 	modified:   qtl/templates/wouter/display_multiple_traits.html 	modified:   qtl/templates/wouter/display_output_data.html 	modified:   qtl/templates/wouter/search_graph_trait.html 	modified:   qtl/templates/wouter/search_individual_trait.html 	modified:   qtl/templates/wouter/search_multiple_trait.html 	new file:   qtl/trait_reduction.py 	modified:   qtl/views.py 	modified:   validation_script/confusion_matrix.py 	modified:   validation_script/data_handlers.py 	new file:   validation_script/eQTL_size_plotter.py 	new file:   validation_script/eQTL_vs_enriched_size.py 	new file:   validation_script/eQTLsize_vs_traits.py 	modified:   validation_script/folder_assignments.py 	new file:   validation_script/get_traits_with_eQTLs.py 	modified:   validation_script/process_datapoints.py 	modified:   validation_script/random_resampling.

--- a/qtl/templates/wbase.html
+++ b/qtl/templates/wbase.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="style.css" />
-    <title>{% block title %}GO{% endblock %}</title>
+    <title>{% block title %}eQTLaGOGO{% endblock %}</title>
 </head>
 
 <body style="background-color:White">
@@ -10,10 +10,9 @@
         {% block sidebar %}
         <ul>
 			<li><a href="/">Home</a></li>
-            <li><a href="/wouter/trait">Search individual trait</a></li>
-            <li><a href="/wouter/check">Search multiple traits</a></li>
-            <li><a href="/wouter/graph">Display graph</a></li>
-            <li><a href="/wouter/output">Display output data</a></li>
+            <li><a href="/eqtlagogo/trait">Search individual trait</a></li>
+            <li><a href="/eqtlagogo/check">Search multiple traits</a></li>
+            <li><a href="/eqtlagogo/output">Display output data</a></li>
         </ul>
         {% endblock %}
     </div>
