--- a/qtl/templates/wouter/search_graph_trait.html
+++ b/qtl/templates/wouter/search_graph_trait.html
@@ -5,12 +5,18 @@
 
   	<form action="." method="get">
 		
-		<h2>Mandatory input</h2>
+		<h2>Semi-mandatory input</h2>
 		Enter a trait: <input id="trait_id" name ="trait_name" type="text"/>
 		<br><br>
 		Enter a cutoff value: <input id ="cutoff" name ="cutoff_name" type="float"/>
 		<br><br>
 		
+		<center><input type="submit" id="search_submit" value="Search" /></center>
+		
+		<br>
+		<hr>
+		<h2>Semi-mandatory input</h2>
+		<br>
 		<select id = "experiment" name = "experiment_name">
 			{% for exp in exps %}
 				<option value = "{{ exp }}">{{ exp }}</option>
@@ -18,18 +24,12 @@
 		</select>
 		<br><br>
 		
-		<center><input type="submit" id="search_submit" value="Search" /></center>
-		
-		<br>
-		<hr>
-		
-		<h2>Optional input</h2>		
 		Uncheck for normal gene expression / 
 		Check for environmental permutation
 		<input  id="set_gxe" name ="gxe" type="checkbox"/>
-		
 		<hr>
-		
+			
+
 		
 	</form>
 
