--- a/qtl/templates/wouter/search_multiple_trait.html
+++ b/qtl/templates/wouter/search_multiple_trait.html
@@ -13,9 +13,13 @@ The multiple traits can be tested all at once.(input is a space delimited list o
 		<h2>Mandatory input</h2>
 		Enter a list of traits separated by a space: <input id="trait_id" name ="trait_name" type="text"/>
 		<br><br>
-		Enter a cutoff value: <input id ="cutoff" name ="cutoff_name" type="float"/>
+		Enter one LOD score cutoff value: <input id ="cutoff" name ="cutoff_name" type="float"/>
 		<br><br>
-		
+		<center><input type="submit" id="search_submit" value="Search" /></center>
+		<br>
+		<hr>
+		<h2>Semi-mandatory input</h2>
+		<br>			
 		<select id = "experiment" name = "experiment_name">
 			{% for exp in exps %}
 				<option value = "{{ exp }}">{{ exp }}</option>
@@ -23,20 +27,14 @@ The multiple traits can be tested all at once.(input is a space delimited list o
 		</select>
 		
 		<br><br>
-		
-		<center><input type="submit" id="search_submit" value="Search" /></center>
-		
-		<br>
-		<hr>
-		
-		<h2>Optional input</h2>
 		Uncheck for normal gene expression / 
-		Check for environmental permutation
+		Check for environmental perturbation
 		<input  id="set_gxe" name ="gxe" type="checkbox"/>
 		
-		<br><br>
-		
+		<br>
+		<br>
 		<hr>
+
 		
 
 	</form>
